<resources>
    <string name="app_name">CINEVENT</string>
    <string name="add_event">Add Event</string>
    <string name="attendees_list">Attendees List:</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="events">Events</string>
    <string name="calendar">Calendar</string>
    <string name="monday">MON</string>
    <string name="forward_arrow">Forward Arrow</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="event_title">Event Title</string>
    <string name="start_date">Start Date</string>
    <string name="venue">Venue</string>
    <string name="end_date">End Date</string>
    <string name="location">Location</string>
    <string name="hint_event_title">Event Title</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_end_date">End Date</string>
    <string name="hint_venue">Venue</string>
    <string name="hint_location">Location e.i: 123.222, 234.243</string>
    <string name="description_select_start_date">Select Start Date</string>
    <string name="description_select_end_date">Select End Date</string>
    <string name="description_select_start_time">Select Start Time</string>
    <string name="description_select_end_time">Select End Time</string>
    <string name="description_movie_image">Movie Image</string>
    <string name="n_a">N/A</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="add_attendee">Add Attendee</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="attendee_name">Attendee Name</string>
    <string name="description_remove_attendee">Remove Attendee</string>
    <string name="event_start_date">Event Start Date</string>
    <string name="event_venue">Event Venue</string>
    <string name="number_of_attendee_0">Number of attendee: 0</string>
    <string name="description_edit_event">Edit Event</string>
    <string name="description_delete_event">Delete Event</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_year">Movie Year</string>
    <string name="event_time">Event Time</string>
    <string name="title_activity_maps">Map</string>
    <string name="toolbar_view_events_on_map">View Events on Map</string>
    <string name="toolbar_add_event">Add Event</string>
    <string name="toolbar_sort_event">Sort Event</string>
    <string name="toolbar_settings">Settings</string>
    <string name="settings_notification_threshold">Notification Threshold</string>
    <string name="settings_notification_period">Notification Period</string>
    <string name="settings_remind_again_period">Remind Again Period</string>
</resources>
