<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="veroNstella.rmit.assignment.view.CalendarActivity">

    <android.support.design.widget.TabLayout
        android:id="@+id/calendarTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar" />

    </android.support.design.widget.TabLayout>

    <LinearLayout
        android:id="@+id/calendarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/prevMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:id="@+id/currentMonth"
                android:layout_width="@dimen/layout_width_150"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                app:autoSizeTextType="uniform" />

            <ImageButton
                android:id="@+id/nextMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/forward_arrow"
                app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_33"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/monday"
                android:textAlignment="center"
                android:textSize="@dimen/text_22"
                app:autoSizeTextType="none" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tuesday"
                android:textAlignment="center"
                android:textSize="@dimen/text_22"
                app:autoSizeTextType="none" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/wednesday"
                android:textAlignment="center"
                android:textSize="@dimen/text_22"
                app:autoSizeTextType="none" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/thursday"
                android:textAlignment="center"
                android:textSize="@dimen/text_22"
                app:autoSizeTextType="none" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/friday"
                android:textAlignment="center"
                android:textSize="@dimen/text_22"
                app:autoSizeTextType="none" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/saturday"
                android:textAlignment="center"
                android:textSize="@dimen/text_22"
                app:autoSizeTextType="none" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sunday"
                android:textAlignment="center"
                android:textSize="@dimen/text_22"
                app:autoSizeTextType="none" />
        </LinearLayout>

        <GridView
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numColumns="7"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/selected_date_events_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
