<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/eventCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_7"
        app:cardBackgroundColor="@color/lightGrey"
        app:cardCornerRadius="@dimen/corner_radius_5"
        app:cardElevation="@dimen/card_elevation"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgEventMovie"
                android:layout_width="@dimen/layout_width_7"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:contentDescription="@string/description_movie_image"
                app:srcCompat="@drawable/movie" />

            <LinearLayout
                android:layout_width="@dimen/layout_width_0"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical"
                android:paddingStart="@dimen/padding_10"
                android:paddingTop="@dimen/padding_5"
                android:paddingEnd="@dimen/padding_5"
                android:paddingBottom="@dimen/padding_5">

                <TextView
                    android:id="@+id/txtEventTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_title"
                    android:textSize="@dimen/text_20" />

                <TextView
                    android:id="@+id/txtEventStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_start_date"
                    android:textSize="@dimen/text_14" />

                <TextView
                    android:id="@+id/txtEventVenue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_venue"
                    android:textSize="@dimen/text_14" />

                <TextView
                    android:id="@+id/txtEventMovieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/n_a"
                    android:textSize="@dimen/text_14" />

                <TextView
                    android:id="@+id/txtEventAttendeesNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_attendee_0"
                    android:textSize="@dimen/text_14" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/layout_width_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/padding_5"
                android:paddingBottom="@dimen/padding_5"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:id="@+id/imgEventEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/description_edit_event"
                    android:focusable="true"
                    app:srcCompat="@drawable/edit"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:id="@+id/imgEventDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/description_delete_event"
                    android:focusable="true"
                    app:srcCompat="@drawable/delete" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
