<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin_10"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/lightGrey"
        app:cardCornerRadius="@dimen/corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_10_margin"
            android:orientation="vertical"
            android:padding="@dimen/standard_5_padding">

            <TextView
                android:id="@+id/txtMontlyEventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_title"
                android:textSize="@dimen/text_20" />

            <TextView
                android:id="@+id/txtMonthlyEventTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_time"
                android:textSize="@dimen/text_14" />

            <TextView
                android:id="@+id/txtMonthlyEventVenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_venue"
                android:textSize="@dimen/text_14" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
