<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_7"
        app:cardBackgroundColor="@color/lightGrey"
        app:cardCornerRadius="@dimen/corner_radius_5"
        app:cardElevation="@dimen/card_elevation"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgMoviePoster"
                android:layout_width="@dimen/layout_width_100"
                android:layout_height="@dimen/layout_height_100"
                android:contentDescription="@string/description_movie_image"
                app:srcCompat="@drawable/movie" />

            <LinearLayout
                android:layout_width="@dimen/layout_width_0"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtMovieTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin_5"
                    android:text="@string/movie_title" />

                <TextView
                    android:id="@+id/txtMovieYear"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/layout_height_0"
                    android:layout_margin="@dimen/layout_margin_5"
                    android:layout_weight="3"
                    android:text="@string/movie_year"
                    tools:ignore="NestedWeights" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>